--- a/cowork_project_management_flow/views/cowork_bom.xml
+++ b/cowork_project_management_flow/views/cowork_bom.xml
@@ -19,8 +19,14 @@
         <field name="arch" type="xml">
             <form string="设计方案">
                 <header>
-                    <button name="get_material_info" string="获取组件信息" type="object" class="oe_highlight"/>
-                    <button name="action_to_requisition" string="新建/更新采购申请" type="object" class="oe_highlight"/>
+                    <!-- <button name="get_material_info" string="获取组件信息" type="object" class="oe_highlight" states="draft"/> -->
+                    <button name="button_approval" string="提交" type="object" class="oe_highlight"  states="draft"/>
+                    <button name="button_confirm" string="确认" type="object" class="oe_highlight"  states="approval" groups="cowork_project_management_flow.access_group_technique_director_in_cowork_project_management_flow"/>
+                    <button name="button_return" string="驳回" type="object" class="oe_highlight"  states="approval" groups="cowork_project_management_flow.access_group_technique_director_in_cowork_project_management_flow"/>
+                    <button name="action_to_requisition" string="新建/更新采购申请" type="object" class="oe_highlight"  states="confirm" groups="cowork_project_management_flow.access_group_project_manager_in_cowork_project_management_flow"/>
+                    <button name="button_to_return" string="驳回" type="object" class="oe_highlight"  states="confirm" groups="cowork_project_management_flow.access_group_project_manager_in_cowork_project_management_flow"/>
+
+                    <field name="state" widget="statusbar" statusbar_visible="draft,approval,confirm" readonly="1"/>
                 </header>
                 <sheet>
                     <div class="oe_button_box" name="button_box">
@@ -36,6 +42,11 @@
                         <field name="mechaine_pic" widget="url"/>
                         <field name="electric_pic" widget="url"/>
                     </group>
+                    <group>
+                        <group>
+                            <field name="count"/>
+                        </group>
+                    </group>
                     <!-- <group>
                         <button type="object" class="oe_highlight" name="cowork_create" string="添加明细"/>
                     </group> -->
@@ -49,26 +60,34 @@
                             </tree>
                         </field>
                     </group> -->
-                    <group string="BOM明细">
+                    <hr/>
+                    <button name="%(import_bom_line_action)d" 
+                    string="导入BOM明细"
+                    icon="fa-upload"
+                    type="action" 
+                    class="oe_stat_button"  attrs="{'invisible':[('state','!=','draft')]}"/>
+                    <group string="单台BOM明细">
                         <group>
                             <button type="object" class="oe_highlight" name="cowork_create" string="添加明细"/>
                         </group>
-                        <field name="spare_parts_lines" nolabel="1" create="0" delete="0">
-                            <tree editable="bottom" limit="10">
-                                <field name="class_id"/>
+                        <field name="spare_parts_lines" nolabel="1" attrs="{'readonly':[('state','!=','draft')]}">
+                            <tree editable="bottom" limit="10" create="0" delete="0">
                                 <field name="class_categ_id"/>
                                 <field name="categ_id"/>
                                 <field name="product_tmpl_id" domain="[('categ_id','=',categ_id)]" context="{'default_categ_id':categ_id}"/>
-                                <field name="brand_id"/>
+                                <field name="default_code"/>
                                 <field name="count"/>
                                 <field name="uom_id"/>
+                                <field name="material"/>
+                                <field name="class_id"/>
+                                <field name="brand_id"/>
                                 <field name="comments"/>
                                 <button type="object" class="oe_highlight" name="cowork_write" string="明细变更"/>
                                 <button type="object" class="oe_highlight" name="cowork_delete" string="删除明细" confirm="是否确认删除"/>
                             </tree>
                         </field>
                     </group>
-                    <group string="明细变更操作记录">
+                    <group name="cowork_message_ids" string="明细变更操作记录">
                         <field name="cowork_message_ids" readonly="1" nolabel="1">
                             <tree editable="bottom" limit="10">
                                 <field name="user_id"/>
