--- a/cowork_project_management_flow/views/cowork_scheme_preliminary.xml
+++ b/cowork_project_management_flow/views/cowork_scheme_preliminary.xml
@@ -6,11 +6,14 @@
         <field name="arch" type="xml">
             <form string="项目初步方案">
                 <header>
-                    <button name="action_to_business" string="技术部提交" type="object" class="oe_highlight" states='technology'/>
-                    <button name="create_quote" string="转报价" type="object" class="oe_highlight" attrs="{'invisible':['|',('state','!=','business'),('quote_id','!=',False)]}"/>
-                    <button name="button_return_scheme" string="驳回" type="object" class="oe_highlight" attrs="{'invisible':['|',('quote_id','!=',False),('state','!=','business')]}"/>
+                    <button name="action_to_product" string="技术部提交" type="object" class="oe_highlight" states='technology' groups="cowork_project_management_flow.access_group_technique_director_in_cowork_project_management_flow"/>
 
-                    <field name="state" widget="statusbar" statusbar_visible="technology,business" readonly="1"/>
+                    <button name="action_to_business" string="项目管理部提交" type="object" class="oe_highlight" states='product' groups="cowork_project_management_flow.access_group_project_manager_in_cowork_project_management_flow"/>
+
+                    <button name="create_quote" string="转报价" type="object" class="oe_highlight" attrs="{'invisible':['|',('state','!=','business'),('quote_id','!=',False)]}" groups="cowork_project_management_flow.access_group_merchant_director_in_cowork_project_management_flow"/>
+                    <button name="button_return_scheme" string="驳回" type="object" class="oe_highlight" attrs="{'invisible':['|',('quote_id','!=',False),('state','!=','business')]}" groups="cowork_project_management_flow.access_group_merchant_director_in_cowork_project_management_flow"/>
+
+                    <field name="state" widget="statusbar" statusbar_visible="technology,product,business" readonly="1"/>
                 </header>
                 <sheet>
                     <div class="oe_button_box" name="button_box">
@@ -23,8 +26,8 @@
                             <field name="apply_id" readonly="1"/>
                             <field name="date_deliver"/>
                             <field name="title" readonly="1"/>
-                            <field name="user_id" attrs="{'readonly': [('state', '=', 'business')]}"/>
-                            <field name="date_fill" attrs="{'readonly': [('state', '=', 'business')]}"/>
+                            <field name="user_id" readonly="1"/>
+                            <field name="date_fill" attrs="{'readonly': [('state', '!=', 'technology')]}"/>
                             <field name="quote_id" attrs="{'invisible':[('quote_id','=',False)],'readonly': [('state', '=', 'business')]}"/>
                         </group>
                         <group string="预估总成本" readonly="1">
@@ -36,7 +39,7 @@
                     </group>
                     <hr/>
                     <group string="1.人力成本">
-                        <field name="labor_cost_lines" nolabel="1" attrs="{'readonly': [('state', '=', 'business')]}">
+                        <field name="labor_cost_lines" nolabel="1" attrs="{'readonly': [('state', '!=', 'product')]}">
                             <tree editable="bottom">
                                 <field name="job_id" required="1" options="{'no_create_edit': True}"/>
                                 <field name="count"/>
@@ -52,7 +55,7 @@
                     <hr/>
                     <button type="object" class="oe_highlight" name="import_categs" string="导入物料成本项目" attrs="{'invisible': [('state', '=', 'business')]}"/>->编辑物料
                     <group string="2.物料成本">
-                        <field name="material_cost_lines" nolabel="1" attrs="{'readonly': [('state', '=', 'business')]}">
+                        <field name="material_cost_lines" nolabel="1" attrs="{'readonly': [('state', '!=', 'technology')]}">
                             <tree editable="bottom">
                                 <field name="material_categ_id" required="1" options="{'no_create_edit': True}"/>
                                 <field name="total_price" widget="monetary" options="{'currency_field': 'currency_id'}" sum="Total"/>
@@ -64,7 +67,7 @@
                     </group>
                     <hr/>
                     <group string="3.各组件物料成本预估">
-                        <field name="material_cost_details_lines" readonly="1" nolabel="1">
+                        <field name="material_cost_details_lines" readonly="1" nolabel="1"  attrs="{'readonly': [('state', '!=', 'technology')]}">
                             <tree editable="bottom">
                                 <field name="name"/>
                                 <field name="class_id"/>
