--- a/cowork_project_management_flow/views/cowork_quote_order.xml
+++ b/cowork_project_management_flow/views/cowork_quote_order.xml
@@ -37,6 +37,7 @@
                         <group>
                             <field name="project_id" attrs="{'readonly': [('state', '!=', 'business')]}"/>
                             <field name="date_deliver"/>
+                            <field name="count" readonly="1"/>
                         </group>
                         <group>
                             <field name="partner_id" attrs="{'readonly': [('state', '!=', 'business')]}"/>
@@ -49,9 +50,9 @@
                                 <field name="name" readonly="1"/>
                                 <field name="count" readonly="1"/>
                                 <field name="class_id" readonly="1"/>
-                                <field name="total_cost" widget="monetary" options="{'currency_field': 'currency_id'}" readonly="1" sum="Total"/>
+                                <field name="total_cost" widget="monetary" options="{'currency_field': 'currency_id'}" readonly="1" sum="总计"/>
                                 <field name="currency_id" invisible="1"/>
-                                <field name="sale_cost" widget="monetary" options="{'currency_field': 'currency_id'}" sum="Total"/>
+                                <field name="sale_cost" widget="monetary" options="{'currency_field': 'currency_id'}" sum="总计"/>
                                 <field name="state" invisible="1"/>
                                 <button type="object" class="oe_highlight" name="edit_spare_parts" string="编辑组件" attrs="{'invisible': [('state', '!=', 'technology')]}"/>
                             </tree>
@@ -65,8 +66,8 @@
                                 <field name="hours_per_day" readonly="1"/>
                                 <field name="total_hours" readonly="1"/>
                                 <field name="unit_price" widget="monetary" options="{'currency_field': 'currency_id'}" readonly="1"/>
-                                <field name="total_price" widget="monetary" options="{'currency_field': 'currency_id'}" readonly="1" sum="Total"/>
-                                <field name="total_quote" widget="monetary" options="{'currency_field': 'currency_id'}" sum="Total"/>
+                                <field name="total_price" widget="monetary" options="{'currency_field': 'currency_id'}" readonly="1" sum="总计"/>
+                                <field name="total_quote" widget="monetary" options="{'currency_field': 'currency_id'}" sum="总计"/>
                                 <field name="currency_id" invisible="1"/>
                                 <field name="state" invisible="1"/>
                                 <button type="object" class="oe_highlight" name="edit_spare_parts" string="编辑人力信息" attrs="{'invisible': [('state', '!=', 'project')]}"/>
