--- a/cowork_project_management_flow/views/cowork_scheme_preliminary.xml
+++ b/cowork_project_management_flow/views/cowork_scheme_preliminary.xml
@@ -26,6 +26,7 @@
                             <field name="apply_id" readonly="1"/>
                             <field name="date_deliver"/>
                             <field name="title" readonly="1"/>
+                            <field name="count" readonly="1"/>
                             <field name="user_id" readonly="1"/>
                             <field name="date_fill" attrs="{'readonly': [('state', '!=', 'technology')]}"/>
                             <field name="quote_id" attrs="{'invisible':[('quote_id','=',False)],'readonly': [('state', '=', 'business')]}"/>
@@ -47,18 +48,18 @@
                                 <field name="count_day"/>
                                 <field name="unit_price" widget="monetary" options="{'currency_field': 'currency_id'}"/>
                                 <field name="total_hours"/>
-                                <field name="total_price" widget="monetary" options="{'currency_field': 'currency_id'}" sum="Total"/>
+                                <field name="total_price" widget="monetary" options="{'currency_field': 'currency_id'}" sum="总计"/>
                                 <field name="currency_id" invisible="1"/>
                             </tree>
                         </field>
                     </group>
                     <hr/>
-                    <button type="object" class="oe_highlight" name="import_categs" string="导入物料成本项目" attrs="{'invisible': [('state', '=', 'business')]}"/>->编辑物料
+                    <button type="object" class="oe_highlight" name="import_categs" string="导入物料成本项目" attrs="{'invisible': [('state', '=', 'business')]}"/>
                     <group string="2.物料成本">
                         <field name="material_cost_lines" nolabel="1" attrs="{'readonly': [('state', '!=', 'technology')]}">
                             <tree editable="bottom">
                                 <field name="material_categ_id" required="1" options="{'no_create_edit': True}"/>
-                                <field name="total_price" widget="monetary" options="{'currency_field': 'currency_id'}" sum="Total"/>
+                                <field name="total_price" widget="monetary" options="{'currency_field': 'currency_id'}" sum="总计"/>
                                 <field name="currency_id" invisible="1"/>
                                 <field name="state" invisible="1"/>
                                 <button type="object" class="oe_highlight" name="edit_details" string="编辑物料" attrs="{'invisible': [('state', '=', 'business')]}"/>
@@ -73,7 +74,7 @@
                                 <field name="class_id"/>
                                 <field name="unit_cost"/>
                                 <field name="count"/>
-                                <field name="total_cost" sum="Total"/>
+                                <field name="total_cost" sum="总计"/>
                                 <field name="state" invisible="1"/>
                                 <button type="object" class="oe_highlight" name="edit_spare_parts" string="编辑组件" attrs="{'invisible': [('state', '=', 'business')]}"/>
                             </tree>
@@ -126,7 +127,6 @@
                 <filter name="user_id" string="填单人" context="{'group_by':'user_id'}"/>
                 <filter name="date_fill" string="填单时间" context="{'group_by':'date_fill'}"/>
                 <filter name="apply_id" string="项目编号" context="{'group_by':'apply_id'}"/>
-                
             </search>
         </field>
     </record>
